<resources>
    <string name="app_name">Live Score League</string>

    <string name="match">Match</string>
    <string name="favorite">Favorite</string>
    <string name="teams">Teams</string>
    <string name="players">Players</string>

    <string name="tanggal_pertandingan">Tanggal Pertandingan</string>
    <string name="club_team_home">Club Team Home</string>
    <string name="vs">VS</string>
    <string name="club_team_away">Club Team Away</string>
    <string name="match_detail">Match Detail</string>

    <string name="zero">-</string>
    <string name="goals">GOALS</string>
    <string name="goalkeeper">GoalKeeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>

    <string name="your_favorite">Favorite Match</string>
    <string name="league_name">League Name</string>


    <string-array name="ligaName">
        <item>Liga Inggris</item>
        <item>Liga Spanyol</item>
        <item>Liga Francis</item>
        <item>Liga Jerman</item>
        <item>Liga Italy</item>
        <item>Liga America</item>
        <item>Liga Portugal</item>
        <item>Liga Australia</item>
        <item>Liga Primer Skotlandia</item>
        <item>Liga Inggris Championsip</item>
    </string-array>
    <array name="liga_image">
        <item>@drawable/img_liga_inggris</item>
        <item>@drawable/img_liga_spanyol</item>
        <item>@drawable/img_liga_prancis</item>
        <item>@drawable/img_liga_jerman</item>
        <item>@drawable/img_liga_italy</item>
        <item>@drawable/img_liga_america</item>
        <item>@drawable/img_liga_portugis</item>
        <item>@drawable/img_liga_australia</item>
        <item>@drawable/img_liga_scotlan</item>
        <item>@drawable/img_liga_championsip</item>
    </array>
    <string-array name="id_liga">
        <item>4328</item>
        <item>4335</item>
        <item>4484</item>
        <item>4331</item>
        <item>4332</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4395</item>
        <item>4396</item>

    </string-array>

    <string name="nama_liga">Nama Liga</string>
    <string name="favorite_anda">Pertandingan Favorite Anda</string>
    <string name="no">No</string>
    <string name="nama_club">Nama Club</string>
    <string name="played">Played</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="gd">GD</string>
    <string name="pts">PTS</string>
</resources>
