<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:shimmer="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp">
        <TextView
                android:text="@string/no"
                android:id="@+id/nomorKlasemen"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="Name"
                android:id="@+id/nameClub"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="Play"
                android:id="@+id/playedClub"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/gf"
                android:id="@+id/gfClub"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/ga"
                android:id="@+id/gaClub"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/gd"
                android:id="@+id/gdClub"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/pts"
                android:id="@+id/ptsClub"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

        <!-- Adding 7 rows of placeholders -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:background="@color/background"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:background="@color/background"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:background="@color/background"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:background="@color/background"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:background="@color/background"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

            </LinearLayout>

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <com.mlsdev.animatedrv.AnimatedRecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:animationDuration="400"
            app:layoutAnimation="@anim/layout_animation_from_bottom"
            app:layoutManagerOrientation="vertical"
            app:layoutManagerReverse="false"
            app:layoutManagerType="linear"
            android:id="@+id/rv_standings">

    </com.mlsdev.animatedrv.AnimatedRecyclerView>

</LinearLayout>