<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
                name="event"
                type="com.surya.livescoreleague.data.db.entities.Event"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ScrollView android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/linearLayout"
                          android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:gravity="center"
                        android:layout_marginTop="5dp">

                    <ImageView
                            android:contentDescription="@string/match"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:id="@+id/imgViewHome"/>
                    <TextView
                            android:text="@{event.intHomeScore}"
                            android:id="@+id/scoreHome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_gravity="center"/>
                    <TextView
                            android:text="@string/vs"
                            android:id="@+id/txtVS"
                            android:layout_marginStart="3dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:text="@{event.intAwayScore}"
                            android:id="@+id/scoreAway"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_gravity="center"/>

                    <ImageView
                            android:id="@+id/imgAway"
                            android:layout_width="100dp"
                            android:layout_gravity="end"
                            android:layout_height="100dp"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="88dp"
                            android:background="#f4f4f4"
                            app:cardCornerRadius="4dp"
                            app:cardElevation="8dp"
                            android:elevation="8dp">
                        <TextView
                                android:text="@string/match_detail"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                        />
                        <TextView
                                android:text="@{event.strEvent}"
                                android:id="@+id/namaTeamsBertanding"
                                android:layout_marginTop="30dp"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">
                    <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#f4f4f4"
                            app:cardCornerRadius="4dp"
                            app:cardElevation="8dp"
                            android:elevation="8dp">
                        <TextView
                                android:id="@+id/goalHome"
                                android:text="@{event.strHomeGoalDetails}"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:layout_width="125dp"
                                android:layout_height="wrap_content"
                        />
                        <TextView
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/goals"/>
                        <TextView
                                android:text="@{event.strAwayGoalDetails}"
                                android:textStyle="bold"
                                android:id="@+id/goalAway"
                                android:layout_gravity="end"
                                android:gravity="end"
                                android:layout_width="131dp"
                                android:layout_height="wrap_content"/>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">
                    <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#f4f4f4"
                            app:cardCornerRadius="4dp"
                            app:cardElevation="8dp"
                            android:elevation="8dp">
                        <TextView
                                android:id="@+id/kiperHome"
                                android:text="@{event.strHomeLineupGoalkeeper}"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:layout_width="131dp"
                                android:layout_height="wrap_content"
                        />
                        <TextView
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/goalkeeper"/>
                        <TextView
                                android:text="@{event.strAwayLineupGoalkeeper}"
                                android:textStyle="bold"
                                android:id="@+id/kiperAway"
                                android:layout_gravity="end"
                                android:gravity="end"
                                android:layout_width="134dp"
                                android:layout_height="wrap_content"/>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">
                    <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#f4f4f4"
                            app:cardCornerRadius="4dp"
                            app:cardElevation="8dp"
                            android:elevation="8dp">
                        <TextView
                                android:text="@{event.strHomeLineupDefense}"
                                android:textStyle="bold"
                                android:id="@+id/bekHome"
                                android:gravity="center"
                                android:layout_width="133dp"
                                android:layout_height="wrap_content"
                        />
                        <TextView
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/defense"/>
                        <TextView
                                android:text="@{event.strAwayLineupDefense}"
                                android:textStyle="bold"
                                android:layout_gravity="end"
                                android:id="@+id/bekAway"
                                android:gravity="end"
                                android:layout_width="131dp"
                                android:layout_height="wrap_content"/>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                    <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#f4f4f4"
                            app:cardCornerRadius="4dp"
                            app:cardElevation="8dp"
                            android:elevation="8dp">
                        <TextView
                                android:text="@{event.strHomeLineupMidfield}"
                                android:textStyle="bold"
                                android:id="@+id/gelandangHome"
                                android:gravity="center"
                                android:layout_width="131dp"
                                android:layout_height="wrap_content"
                        />
                        <TextView
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/midfield"/>
                        <TextView
                                android:text="@{event.strAwayLineupMidfield}"
                                android:textStyle="bold"
                                android:layout_gravity="end"
                                android:id="@+id/gelandangAway"
                                android:gravity="end"
                                android:layout_width="130dp"
                                android:layout_height="wrap_content"/>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">
                    <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#f4f4f4"
                            app:cardCornerRadius="4dp"
                            app:cardElevation="8dp"
                            android:elevation="8dp">
                        <TextView
                                android:text="@{event.strHomeLineupForward}"
                                android:textStyle="bold"
                                android:id="@+id/penyerangHome"
                                android:gravity="center"
                                android:layout_width="130dp"
                                android:layout_height="wrap_content"
                        />
                        <TextView

                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/forward"/>
                        <TextView
                                android:text="@{event.strAwayLineupForward}"
                                android:textStyle="bold"
                                android:id="@+id/penyerangAway"
                                android:gravity="end"
                                android:layout_gravity="end"
                                android:layout_width="126dp"
                                android:layout_height="wrap_content"/>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    
</layout>